lib/activefacts/cql/parser/LexicalRules.rb
#
# Autogenerated from a Treetop grammar. Edits may be lost.


#       ActiveFacts CQL Parser.
#       Various lexical rules for CQL.
#
# Copyright (c) 2009 Clifford Heath. Read the LICENSE file.
#
module ActiveFacts
  module CQL
    module LexicalRules
      include Treetop::Runtime

      def root
        @root ||= :range
      end

      module Range0
        def node_type; :literal; end
      end

      def _nt_range
        start_index = index
        if node_cache[:range].has_key?(index)
          cached = node_cache[:range][index]
          if cached
            node_cache[:range][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_numeric_range
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
          r0.extend(Range0)
          r0.extend(Range0)
        else
          r2 = _nt_string_range
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
            r0.extend(Range0)
            r0.extend(Range0)
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:range][start_index] = r0

        r0
      end

      module NumericRange0
        def s1
          elements[1]
        end

        def end
          elements[2]
        end

        def s2
          elements[3]
        end
      end

      module NumericRange1
        def number
          elements[0]
        end

        def s
          elements[1]
        end

        def tail
          elements[2]
        end
      end

      module NumericRange2
        def value
          if !tail.empty?
            last = tail.end.value unless tail.end.empty?
            [ number.value, last ]
          else
            number.value
          end
        end
      end

      module NumericRange3
        def s1
          elements[1]
        end

        def number
          elements[2]
        end

        def s2
          elements[3]
        end
      end

      module NumericRange4
        def value
          [ nil, number.value ]
        end
      end

      def _nt_numeric_range
        start_index = index
        if node_cache[:numeric_range].has_key?(index)
          cached = node_cache[:numeric_range][index]
          if cached
            node_cache[:numeric_range][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_number
        s1 << r2
        if r2
          r3 = _nt_s
          s1 << r3
          if r3
            i5, s5 = index, []
            if (match_len = has_terminal?('..', false, index))
              r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
              @index += match_len
            else
              terminal_parse_failure('\'..\'')
              r6 = nil
            end
            s5 << r6
            if r6
              r7 = _nt_s
              s5 << r7
              if r7
                r9 = _nt_number
                if r9
                  r8 = r9
                else
                  r8 = instantiate_node(SyntaxNode,input, index...index)
                end
                s5 << r8
                if r8
                  r10 = _nt_s
                  s5 << r10
                end
              end
            end
            if s5.last
              r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
              r5.extend(NumericRange0)
            else
              @index = i5
              r5 = nil
            end
            if r5
              r4 = r5
            else
              r4 = instantiate_node(SyntaxNode,input, index...index)
            end
            s1 << r4
          end
        end
        if s1.last
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
          r1.extend(NumericRange1)
          r1.extend(NumericRange2)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i11, s11 = index, []
          if (match_len = has_terminal?('..', false, index))
            r12 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'..\'')
            r12 = nil
          end
          s11 << r12
          if r12
            r13 = _nt_s
            s11 << r13
            if r13
              r14 = _nt_number
              s11 << r14
              if r14
                r15 = _nt_s
                s11 << r15
              end
            end
          end
          if s11.last
            r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
            r11.extend(NumericRange3)
            r11.extend(NumericRange4)
          else
            @index = i11
            r11 = nil
          end
          if r11
            r11 = SyntaxNode.new(input, (index-1)...index) if r11 == true
            r0 = r11
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:numeric_range][start_index] = r0

        r0
      end

      module StringRange0
        def s1
          elements[1]
        end

        def end
          elements[2]
        end

        def s2
          elements[3]
        end
      end

      module StringRange1
        def string
          elements[0]
        end

        def s
          elements[1]
        end

        def tail
          elements[2]
        end
      end

      module StringRange2
        # Ranges require the original text of the string, not the content:
        def value
          first = string.text_value
          if !tail.empty?
            last = tail.end.text_value unless tail.end.empty?
            [ first, last ]
          else
            first
          end
        end
      end

      module StringRange3
        def s1
          elements[1]
        end

        def string
          elements[2]
        end

        def s2
          elements[3]
        end
      end

      module StringRange4
        def value
          [ nil, string.value ]
        end
      end

      def _nt_string_range
        start_index = index
        if node_cache[:string_range].has_key?(index)
          cached = node_cache[:string_range][index]
          if cached
            node_cache[:string_range][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_string
        s1 << r2
        if r2
          r3 = _nt_s
          s1 << r3
          if r3
            i5, s5 = index, []
            if (match_len = has_terminal?('..', false, index))
              r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
              @index += match_len
            else
              terminal_parse_failure('\'..\'')
              r6 = nil
            end
            s5 << r6
            if r6
              r7 = _nt_s
              s5 << r7
              if r7
                r9 = _nt_string
                if r9
                  r8 = r9
                else
                  r8 = instantiate_node(SyntaxNode,input, index...index)
                end
                s5 << r8
                if r8
                  r10 = _nt_s
                  s5 << r10
                end
              end
            end
            if s5.last
              r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
              r5.extend(StringRange0)
            else
              @index = i5
              r5 = nil
            end
            if r5
              r4 = r5
            else
              r4 = instantiate_node(SyntaxNode,input, index...index)
            end
            s1 << r4
          end
        end
        if s1.last
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
          r1.extend(StringRange1)
          r1.extend(StringRange2)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i11, s11 = index, []
          if (match_len = has_terminal?('..', false, index))
            r12 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'..\'')
            r12 = nil
          end
          s11 << r12
          if r12
            r13 = _nt_s
            s11 << r13
            if r13
              r14 = _nt_string
              s11 << r14
              if r14
                r15 = _nt_s
                s11 << r15
              end
            end
          end
          if s11.last
            r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
            r11.extend(StringRange3)
            r11.extend(StringRange4)
          else
            @index = i11
            r11 = nil
          end
          if r11
            r11 = SyntaxNode.new(input, (index-1)...index) if r11 == true
            r0 = r11
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:string_range][start_index] = r0

        r0
      end

      module Url0
      end

      module Url1
        def node_type; :literal; end
      end

      def _nt_url
        start_index = index
        if node_cache[:url].has_key?(index)
          cached = node_cache[:url][index]
          if cached
            node_cache[:url][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        s0, i0 = [], index
        loop do
          i1, s1 = index, []
          i2 = index
          i3 = index
          r4 = _nt_white
          if r4
            r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
            r3 = r4
          else
            if (match_len = has_terminal?(';', false, index))
              r5 = true
              @index += match_len
            else
              terminal_parse_failure('\';\'')
              r5 = nil
            end
            if r5
              r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
              r3 = r5
            else
              @index = i3
              r3 = nil
            end
          end
          if r3
            @index = i2
            r2 = nil
            terminal_parse_failure("(any alternative)", true)
          else
            @terminal_failures.pop
            @index = i2
            r2 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r2
          if r2
            if index < input_length
              r6 = true
              @index += 1
            else
              terminal_parse_failure("any character")
              r6 = nil
            end
            s1 << r6
          end
          if s1.last
            r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
            r1.extend(Url0)
          else
            @index = i1
            r1 = nil
          end
          if r1
            s0 << r1
          else
            break
          end
        end
        if s0.empty?
          @index = i0
          r0 = nil
        else
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Url1)
          r0.extend(Url1)
        end

        node_cache[:url][start_index] = r0

        r0
      end

      module Literal0
        def s
          elements[1]
        end
      end

      module Literal1
        def value
          elements[0].value
        end
        def node_type; :literal; end
      end

      def _nt_literal
        start_index = index
        if node_cache[:literal].has_key?(index)
          cached = node_cache[:literal][index]
          if cached
            node_cache[:literal][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i1 = index
        r2 = _nt_boolean_literal
        if r2
          r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
          r1 = r2
        else
          r3 = _nt_string
          if r3
            r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
            r1 = r3
          else
            r4 = _nt_number
            if r4
              r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
              r1 = r4
            else
              @index = i1
              r1 = nil
            end
          end
        end
        s0 << r1
        if r1
          r5 = _nt_s
          s0 << r5
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Literal0)
          r0.extend(Literal1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:literal][start_index] = r0

        r0
      end

      module BooleanLiteral0
        def value; true; end
      end

      module BooleanLiteral1
        def value; false; end
      end

      module BooleanLiteral2
      end

      module BooleanLiteral3
        def value; elements[0].value end
      end

      def _nt_boolean_literal
        start_index = index
        if node_cache[:boolean_literal].has_key?(index)
          cached = node_cache[:boolean_literal][index]
          if cached
            node_cache[:boolean_literal][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i1 = index
        r2 = _nt_true
        r2.extend(BooleanLiteral0)
        r2.extend(BooleanLiteral0)
        if r2
          r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
          r1 = r2
        else
          r3 = _nt_false
          r3.extend(BooleanLiteral1)
          r3.extend(BooleanLiteral1)
          if r3
            r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
            r1 = r3
          else
            @index = i1
            r1 = nil
          end
        end
        s0 << r1
        if r1
          i4 = index
          r5 = _nt_alphanumeric
          if r5
            @index = i4
            r4 = nil
          else
            @index = i4
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(BooleanLiteral2)
          r0.extend(BooleanLiteral3)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:boolean_literal][start_index] = r0

        r0
      end

      module String0
      end

      module String1
        def value
          text_value
          eval(text_value.sub(/\A'(.*)'\Z/,'"\1"'))
        end
      end

      def _nt_string
        start_index = index
        if node_cache[:string].has_key?(index)
          cached = node_cache[:string][index]
          if cached
            node_cache[:string][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?("'", false, index))
          r1 = true
          @index += match_len
        else
          terminal_parse_failure('"\'"')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            r3 = _nt_string_char
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            if (match_len = has_terminal?("'", false, index))
              r4 = true
              @index += match_len
            else
              terminal_parse_failure('"\'"')
              r4 = nil
            end
            s0 << r4
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(String0)
          r0.extend(String1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:string][start_index] = r0

        r0
      end

      module Number0
      end

      module Number1
        def value
          eval(text_value)
        end
        def node_type; :literal; end
      end

      def _nt_number
        start_index = index
        if node_cache[:number].has_key?(index)
          cached = node_cache[:number][index]
          if cached
            node_cache[:number][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i1 = index
        r2 = _nt_real
        if r2
          r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
          r1 = r2
        else
          r3 = _nt_fractional_real
          if r3
            r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
            r1 = r3
          else
            r4 = _nt_hexnumber
            if r4
              r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
              r1 = r4
            else
              r5 = _nt_octalnumber
              if r5
                r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                r1 = r5
              else
                @index = i1
                r1 = nil
              end
            end
          end
        end
        s0 << r1
        if r1
          i6 = index
          r7 = _nt_alphanumeric
          if r7
            @index = i6
            r6 = nil
          else
            @index = i6
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r6
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Number0)
          r0.extend(Number1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:number][start_index] = r0

        r0
      end

      module StringChar0
      end

      module StringChar1
      end

      module StringChar2
      end

      module StringChar3
      end

      module StringChar4
      end

      module StringChar5
      end

      def _nt_string_char
        start_index = index
        if node_cache[:string_char].has_key?(index)
          cached = node_cache[:string_char][index]
          if cached
            node_cache[:string_char][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        if (match_len = has_terminal?('\\', false, index))
          r2 = true
          @index += match_len
        else
          terminal_parse_failure('\'\\\\\'')
          r2 = nil
        end
        s1 << r2
        if r2
          if has_terminal?(@regexps[gr = '\A[befntr\\\\\']'] ||= Regexp.new(gr), :regexp, index)
            r3 = true
            @index += 1
          else
            terminal_parse_failure('[befntr\\\\\']')
            r3 = nil
          end
          s1 << r3
        end
        if s1.last
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
          r1.extend(StringChar0)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i4, s4 = index, []
          if (match_len = has_terminal?('\\', false, index))
            r5 = true
            @index += match_len
          else
            terminal_parse_failure('\'\\\\\'')
            r5 = nil
          end
          s4 << r5
          if r5
            if has_terminal?(@regexps[gr = '\A[0-7]'] ||= Regexp.new(gr), :regexp, index)
              r6 = true
              @index += 1
            else
              terminal_parse_failure('[0-7]')
              r6 = nil
            end
            s4 << r6
            if r6
              if has_terminal?(@regexps[gr = '\A[0-7]'] ||= Regexp.new(gr), :regexp, index)
                r7 = true
                @index += 1
              else
                terminal_parse_failure('[0-7]')
                r7 = nil
              end
              s4 << r7
              if r7
                if has_terminal?(@regexps[gr = '\A[0-7]'] ||= Regexp.new(gr), :regexp, index)
                  r8 = true
                  @index += 1
                else
                  terminal_parse_failure('[0-7]')
                  r8 = nil
                end
                s4 << r8
              end
            end
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(StringChar1)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
            r0 = r4
          else
            i9, s9 = index, []
            if (match_len = has_terminal?('\\', false, index))
              r10 = true
              @index += match_len
            else
              terminal_parse_failure('\'\\\\\'')
              r10 = nil
            end
            s9 << r10
            if r10
              s11, i11 = [], index
              loop do
                if has_terminal?(@regexps[gr = '\A[\\r]'] ||= Regexp.new(gr), :regexp, index)
                  r12 = true
                  @index += 1
                else
                  terminal_parse_failure('[\\r]')
                  r12 = nil
                end
                if r12
                  s11 << r12
                else
                  break
                end
              end
              r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
              s9 << r11
              if r11
                if has_terminal?(@regexps[gr = '\A[\\n]'] ||= Regexp.new(gr), :regexp, index)
                  r13 = true
                  @index += 1
                else
                  terminal_parse_failure('[\\n]')
                  r13 = nil
                end
                s9 << r13
                if r13
                  s14, i14 = [], index
                  loop do
                    if has_terminal?(@regexps[gr = '\A[\\r]'] ||= Regexp.new(gr), :regexp, index)
                      r15 = true
                      @index += 1
                    else
                      terminal_parse_failure('[\\r]')
                      r15 = nil
                    end
                    if r15
                      s14 << r15
                    else
                      break
                    end
                  end
                  r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
                  s9 << r14
                end
              end
            end
            if s9.last
              r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
              r9.extend(StringChar2)
            else
              @index = i9
              r9 = nil
            end
            if r9
              r9 = SyntaxNode.new(input, (index-1)...index) if r9 == true
              r0 = r9
            else
              if (match_len = has_terminal?('\\0', false, index))
                r16 = instantiate_node(SyntaxNode,input, index...(index + match_len))
                @index += match_len
              else
                terminal_parse_failure('\'\\\\0\'')
                r16 = nil
              end
              if r16
                r16 = SyntaxNode.new(input, (index-1)...index) if r16 == true
                r0 = r16
              else
                i17, s17 = index, []
                if (match_len = has_terminal?('\\x', false, index))
                  r18 = instantiate_node(SyntaxNode,input, index...(index + match_len))
                  @index += match_len
                else
                  terminal_parse_failure('\'\\\\x\'')
                  r18 = nil
                end
                s17 << r18
                if r18
                  if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                    r19 = true
                    @index += 1
                  else
                    terminal_parse_failure('[0-9A-Fa-f]')
                    r19 = nil
                  end
                  s17 << r19
                  if r19
                    if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                      r20 = true
                      @index += 1
                    else
                      terminal_parse_failure('[0-9A-Fa-f]')
                      r20 = nil
                    end
                    s17 << r20
                  end
                end
                if s17.last
                  r17 = instantiate_node(SyntaxNode,input, i17...index, s17)
                  r17.extend(StringChar3)
                else
                  @index = i17
                  r17 = nil
                end
                if r17
                  r17 = SyntaxNode.new(input, (index-1)...index) if r17 == true
                  r0 = r17
                else
                  i21, s21 = index, []
                  if (match_len = has_terminal?('\\u', false, index))
                    r22 = instantiate_node(SyntaxNode,input, index...(index + match_len))
                    @index += match_len
                  else
                    terminal_parse_failure('\'\\\\u\'')
                    r22 = nil
                  end
                  s21 << r22
                  if r22
                    if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                      r23 = true
                      @index += 1
                    else
                      terminal_parse_failure('[0-9A-Fa-f]')
                      r23 = nil
                    end
                    s21 << r23
                    if r23
                      if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                        r24 = true
                        @index += 1
                      else
                        terminal_parse_failure('[0-9A-Fa-f]')
                        r24 = nil
                      end
                      s21 << r24
                      if r24
                        if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                          r25 = true
                          @index += 1
                        else
                          terminal_parse_failure('[0-9A-Fa-f]')
                          r25 = nil
                        end
                        s21 << r25
                        if r25
                          if has_terminal?(@regexps[gr = '\A[0-9A-Fa-f]'] ||= Regexp.new(gr), :regexp, index)
                            r26 = true
                            @index += 1
                          else
                            terminal_parse_failure('[0-9A-Fa-f]')
                            r26 = nil
                          end
                          s21 << r26
                        end
                      end
                    end
                  end
                  if s21.last
                    r21 = instantiate_node(SyntaxNode,input, i21...index, s21)
                    r21.extend(StringChar4)
                  else
                    @index = i21
                    r21 = nil
                  end
                  if r21
                    r21 = SyntaxNode.new(input, (index-1)...index) if r21 == true
                    r0 = r21
                  else
                    i27, s27 = index, []
                    i28 = index
                    if has_terminal?(@regexps[gr = '\A[\\\'\\\\\\0-\\x07\\x0A-\\x1F]'] ||= Regexp.new(gr), :regexp, index)
                      r29 = true
                      @index += 1
                    else
                      terminal_parse_failure('[\\\'\\\\\\0-\\x07\\x0A-\\x1F]')
                      r29 = nil
                    end
                    if r29
                      @index = i28
                      r28 = nil
                      terminal_parse_failure('[\\\'\\\\\\0-\\x07\\x0A-\\x1F]', true)
                    else
                      @terminal_failures.pop
                      @index = i28
                      r28 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s27 << r28
                    if r28
                      if index < input_length
                        r30 = true
                        @index += 1
                      else
                        terminal_parse_failure("any character")
                        r30 = nil
                      end
                      s27 << r30
                    end
                    if s27.last
                      r27 = instantiate_node(SyntaxNode,input, i27...index, s27)
                      r27.extend(StringChar5)
                    else
                      @index = i27
                      r27 = nil
                    end
                    if r27
                      r27 = SyntaxNode.new(input, (index-1)...index) if r27 == true
                      r0 = r27
                    else
                      @index = i0
                      r0 = nil
                    end
                  end
                end
              end
            end
          end
        end

        node_cache[:string_char][start_index] = r0

        r0
      end

      module Real0
      end

      def _nt_real
        start_index = index
        if node_cache[:real].has_key?(index)
          cached = node_cache[:real][index]
          if cached
            node_cache[:real][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?(@regexps[gr = '\A[-+]'] ||= Regexp.new(gr), :regexp, index)
          r2 = true
          @index += 1
        else
          terminal_parse_failure('[-+]')
          r2 = nil
        end
        if r2
          r1 = r2
        else
          r1 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r1
        if r1
          if has_terminal?(@regexps[gr = '\A[1-9]'] ||= Regexp.new(gr), :regexp, index)
            r3 = true
            @index += 1
          else
            terminal_parse_failure('[1-9]')
            r3 = nil
          end
          s0 << r3
          if r3
            s4, i4 = [], index
            loop do
              if has_terminal?(@regexps[gr = '\A[0-9]'] ||= Regexp.new(gr), :regexp, index)
                r5 = true
                @index += 1
              else
                terminal_parse_failure('[0-9]')
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            s0 << r4
            if r4
              r7 = _nt_fraction
              if r7
                r6 = r7
              else
                r6 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r6
              if r6
                r9 = _nt_exponent
                if r9
                  r8 = r9
                else
                  r8 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r8
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Real0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:real][start_index] = r0

        r0
      end

      module FractionalReal0
        def fraction
          elements[2]
        end

      end

      def _nt_fractional_real
        start_index = index
        if node_cache[:fractional_real].has_key?(index)
          cached = node_cache[:fractional_real][index]
          if cached
            node_cache[:fractional_real][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?(@regexps[gr = '\A[-+]'] ||= Regexp.new(gr), :regexp, index)
          r2 = true
          @index += 1
        else
          terminal_parse_failure('[-+]')
          r2 = nil
        end
        if r2
          r1 = r2
        else
          r1 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r1
        if r1
          if (match_len = has_terminal?('0', false, index))
            r3 = true
            @index += match_len
          else
            terminal_parse_failure('\'0\'')
            r3 = nil
          end
          s0 << r3
          if r3
            r4 = _nt_fraction
            s0 << r4
            if r4
              r6 = _nt_exponent
              if r6
                r5 = r6
              else
                r5 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r5
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(FractionalReal0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:fractional_real][start_index] = r0

        r0
      end

      module Fraction0
        def radix_point
          elements[0]
        end

      end

      def _nt_fraction
        start_index = index
        if node_cache[:fraction].has_key?(index)
          cached = node_cache[:fraction][index]
          if cached
            node_cache[:fraction][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_radix_point
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?(@regexps[gr = '\A[0-9]'] ||= Regexp.new(gr), :regexp, index)
              r3 = true
              @index += 1
            else
              terminal_parse_failure('[0-9]')
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          if s2.empty?
            @index = i2
            r2 = nil
          else
            r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          end
          s0 << r2
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Fraction0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:fraction][start_index] = r0

        r0
      end

      module Exponent0
      end

      def _nt_exponent
        start_index = index
        if node_cache[:exponent].has_key?(index)
          cached = node_cache[:exponent][index]
          if cached
            node_cache[:exponent][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end
